# rust-silentpayments

./: Cargo.toml  README.md
examples/: spend_fill_outputs.rs
src/: error.rs  lib.rs  receiving.rs  sending.rs  structs.rs  utils.rs
src/tests/: mod.rs  utils.rs  vector_tests.rs
src/utils/: common.rs  hash.rs  receiving.rs  sending.rs
tests/: vector_tests.rs
tests/common/: mod.rs  utils.rs
tests/resources/: send_and_receive_test_vectors.json
