[package]
name = "silentpayments"
version = "0.3.0"
authors = ["cygnet <cygnet3@proton.me>"]
license = "MIT"
edition = "2021"
description = "A library for adding BIP352: Silent Payments support to wallets."
homepage = "https://github.com/cygnet3/rust-silentpayments"
repository = "https://github.com/cygnet3/rust-silentpayments"
keywords = ["bitcoin", "secp256k1"]
readme = "README.md"
exclude = ["tests/resources"]

[lib]
name = "silentpayments"
crate-type = ["lib"]

[features]
default = ["sending", "receiving"]
sending = []
receiving = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bitcoin = { git = "https://github.com/sosthene00/rust-bitcoin.git", branch = "bip352-fork", features = ["serde", "rand-std"] }
futures = "0.3"
bech32 = "0.9"
bimap = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin_hashes = "0.13.0"
reqwest = { version = "0.12.4", features = ["rustls-tls"], default-features = false }
hex = { version = "0.4.3", features = ["serde"] }
log = "0.4"
rayon = "1.10.0"
libc = "0.2"

[dev-dependencies]
rust-bip39 = { version = "1.0.0", features = ["rand"] }
